# codegate-2025-final-fullchain

./: README.md  rce-sbx-138-0-7204-97.patch
exploit/: cc.py  exploit.html  exploit.js  mojo_bindings.js
src/RCE-minishell/: BUILD.gn  file_buffer.cc  mini_shell.cc  mini_shell.h  mini_shell.idl  mini_shell_manager.cc  mini_shell_manager.h  mini_shell_manager.idl  window_mini_shell_manager.cc  window_mini_shell_manager.h
src/SBX-CFS/: cfs.mojom  cfs_directory_impl.cc  cfs_directory_impl.h  cfs_file_impl.cc  cfs_file_impl.h  cfs_item.h  cfs_manager_impl.cc  cfs_manager_impl.h
