# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/blink/renderer/modules/modules.gni")

blink_modules_sources("minishell") {
  sources = [
    "mini_shell_manager.cc",
    "mini_shell_manager.h",
    "mini_shell.cc",
    "mini_shell.h",
    "file_buffer.cc",
    "window_mini_shell_manager.cc",
    "window_mini_shell_manager.h",
  ]

  deps = [
  ]

}
